Fix multiple issues in claim preview layout on mobile (#2193)
* Fix multiple issues in claim preview layout on mobile

* Remove paragraph and cut date since release

* Adjust filter width on channel page on mobile

* Adjust tab structure on mobile

--- a/ui/scss/component/_channel.scss
+++ b/ui/scss/component/_channel.scss
@@ -3,6 +3,14 @@ $metadata-z-index: 1;
 $actions-z-index: 2;
 
 .channelPage-wrapper {
+  .section__header--actions {
+    @media (max-width: $breakpoint-small) {
+      .section__actions {
+        width: 100%;
+      }
+    }
+  }
+
   .emoji-categories {
     margin-bottom: -47.5px;
   }
